--- a/GoLocal/src/pages/payment/payment.scss
+++ b/GoLocal/src/pages/payment/payment.scss
@@ -43,6 +43,7 @@ page-payment {
             height: 200px;
             background-color: grey;
             border-radius: 100px;
+            background-size: cover;
         }
 
         & .activity-title, .activity-date, .activity-time, .activity-price, .activity-guide {
